# TMCTest

./: .env  README.md  docker-compose.yaml
.next/: trace
api/: Dockerfile  pyproject.toml
api/src/test_api/: __init__.py  dependencies.py  metadata.py
api/src/test_api/db/: connection.py
api/src/test_api/models/: user.py
api/src/test_api/routers/: user.py  users.py
api/src/test_api/schemas/: user.py
api/src/test_api/services/: user.py  users.py
api/src/test_api/tests/: test_user.py  test_users.py
frontend/: package-lock.json  package.json  types.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: CreateUserModal.tsx
